--- a/assets/html/footer.html
+++ b/assets/html/footer.html
@@ -1,13 +1,13 @@
 <footer>
     <div>
-        <img src="/src/assets/img/delazur_logo.png" alt="Logo Delazur">
+        <img src="./assets/img/delazur_logo.png" alt="Logo Delazur">
     </div>
     <div>
         <ul>
-            <li><a href="/src/index.html">Accueil</a></li>
-            <li><a href="/src/spectacles.html">Spectacles</a></li>
-            <li><a href="/src/boutique.html">Boutique</a></li>
-            <li><a href="/src/contact.html">Contact</a></li>
+            <li><a href="./index.html">Accueil</a></li>
+            <li><a href="./spectacles.html">Spectacles</a></li>
+            <li><a href="./boutique.html">Boutique</a></li>
+            <li><a href="./contact.html">Contact</a></li>
         </ul>
     </div>
     <div>
@@ -18,11 +18,11 @@
             <li><a href="https://www.facebook.com/delazurband/" aria-label="Facebook" target="_blank"><i class="fab fa-facebook"></i></a></li>
             <li><a href="https://open.spotify.com/artist/1YG9iUkHCKcIEopGLn5QYb" aria-label="Spotify" target="_blank"><i class="fab fa-spotify"></i></a></li>
             <li><a href="https://www.youtube.com/channel/UCNU_NVl0zzl5wluB0_9fNoA" aria-label="Youtube" target="_blank"><i class="fab fa-youtube"></i></a></li>
-            <li><a href="https://fontawesome.com/icons/bandcamp?style=brands" aria-label="Bandcamp" target="_blank"><i class="fab fa-bandcamp"></i></a></li>
+            <li><a href="https://delazur.bandcamp.com/album/azur-mimosa" aria-label="Bandcamp" target="_blank"><i class="fab fa-bandcamp"></i></a></li>
         </ul>
     </div>
     <div>
         <p>Production en médias interactifs</p>
-        <p>GR.06 - Juin 2021</p>
+        <p>GR.08 - Mars 2024</p>
     </div>
 </footer>
