derniere mise a jour, jespere

--- a/boutique.html
+++ b/boutique.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr-CA">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -26,7 +26,7 @@
             </ul>
         </nav>
     </header>
-    <main class="main-boutique">
+    <main>
         <h2 class="boutique yellow">BOUTIQUE</h2>
         <h3 class="boutique pink">ALBUMS</h3>
         <section class="albums">
