--- a/spectacles.html
+++ b/spectacles.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr-CA">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -37,7 +37,7 @@
                 <p class="spectacle-place">Québec</p>
             </div>
             <div class="bg-btn-like">
-                <a href="https://www.imperialbell.com/" target="_blank" class="btn-visit">VISITER LE SITE</a>
+                <a href="https://www.imperialbell.com/" target="_blank" class="btn-visit spectacle">VISITER LE SITE</a>
                 <button aria-label="Aimer le spectacle" class="icons"><i class="fa-regular fa-heart icon-like"></i></button>
             </div>
         </div>
@@ -48,7 +48,7 @@
                 <p class="spectacle-place">Québec</p>
             </div>
             <div class="bg-btn-like">
-                <a href="https://lanti.ca/" target="_blank" class="btn-visit">VISITER LE SITE</a>
+                <a href="https://lanti.ca/" target="_blank" class="btn-visit spectacle">VISITER LE SITE</a>
                 <button aria-label="Aimer le spectacle" class="icons"><i class="fa-regular fa-heart icon-like"></i></button>
             </div>
         </div>
@@ -59,7 +59,7 @@
                 <p class="spectacle-place">Québec</p>
             </div>
             <div class="bg-btn-like">
-                <a href="https://www.facebook.com/lasourcedelamartiniere/?locale=fr_CA" target="_blank" class="btn-visit">VISITER LE SITE</a>
+                <a href="https://www.facebook.com/lasourcedelamartiniere/?locale=fr_CA" target="_blank" class="btn-visit spectacle">VISITER LE SITE</a>
                 <button aria-label="Aimer le spectacle" class="icons"><i class="fa-regular fa-heart icon-like"></i></button>
             </div>
         </div>
@@ -70,7 +70,7 @@
                 <p class="spectacle-place">Montréal</p>
             </div>
             <div class="bg-btn-like">
-                <a href="https://clubsoda.ca/" target="_blank" class="btn-visit">VISITER LE SITE</a>
+                <a href="https://clubsoda.ca/" target="_blank" class="btn-visit spectacle">VISITER LE SITE</a>
                 <button aria-label="Aimer le spectacle" class="icons"><i class="fa-regular fa-heart icon-like"></i></button>
             </div>
         </div>
@@ -81,7 +81,7 @@
                 <p class="spectacle-place">Montréal</p>
             </div>
             <div class="bg-btn-like">
-                <a href="https://www.cafecampus.com/" target="_blank" class="btn-visit">VISITER LE SITE</a>
+                <a href="https://www.cafecampus.com/" target="_blank" class="btn-visit spectacle">VISITER LE SITE</a>
                 <button aria-label="Aimer le spectacle" class="icons"><i class="fa-regular fa-heart icon-like"></i></button>
             </div>
         </div>
@@ -92,7 +92,7 @@
                 <p class="spectacle-place">St-Hyacinthe</p>
             </div>
             <div class="bg-btn-like">
-                <a href="https://www.centredesarts.ca/" target="_blank" class="btn-visit">VISITER LE SITE</a>
+                <a href="https://www.centredesarts.ca/" target="_blank" class="btn-visit spectacle">VISITER LE SITE</a>
                 <button aria-label="Aimer le spectacle" class="icons"><i class="fa-regular fa-heart icon-like"></i></button>
             </div>
         </div>
@@ -103,7 +103,7 @@
                 <p class="spectacle-place">Beloeil</p>
             </div>
             <div class="bg-btn-like">
-                <a href="https://diffusionscoulisse.ca/" target="_blank" class="btn-visit">VISITER LE SITE</a>
+                <a href="https://diffusionscoulisse.ca/" target="_blank" class="btn-visit spectacle">VISITER LE SITE</a>
                 <button aria-label="Aimer le spectacle" class="icons"><i class="fa-regular fa-heart icon-like"></i></button>
             </div>
         </div>
@@ -114,7 +114,7 @@
                 <p class="spectacle-place">Victoriaville</p>
             </div>
             <div class="bg-btn-like">
-                <a href="https://www.lecarre150.com/" target="_blank" class="btn-visit">VISITER LE SITE</a>
+                <a href="https://www.lecarre150.com/" target="_blank" class="btn-visit spectacle">VISITER LE SITE</a>
                 <button aria-label="Aimer le spectacle" class="icons"><i class="fa-regular fa-heart icon-like"></i></button>
             </div>
         </div>
@@ -125,7 +125,7 @@
                 <p class="spectacle-place">Trois-Rivières</p>
             </div>
             <div class="bg-btn-like">
-                <a href="https://www.amphitheatrecogeco.com/" target="_blank" class="btn-visit">VISITER LE SITE</a>
+                <a href="https://www.amphitheatrecogeco.com/" target="_blank" class="btn-visit spectacle">VISITER LE SITE</a>
                 <button aria-label="Aimer le spectacle" class="icons"><i class="fa-regular fa-heart icon-like"></i></button>
             </div>
         </div>
@@ -136,7 +136,7 @@
                 <p class="spectacle-place">Gatineau</p>
             </div>
             <div class="bg-btn-like">
-                <a href="https://www.maisondelaculture.ca/salle-odyssee/" target="_blank" class="btn-visit">VISITER LE SITE</a>
+                <a href="https://www.maisondelaculture.ca/salle-odyssee/" target="_blank" class="btn-visit spectacle">VISITER LE SITE</a>
                 <button aria-label="Aimer le spectacle" class="icons"><i class="fa-regular fa-heart icon-like"></i></button>
             </div>
         </div>
@@ -147,7 +147,7 @@
                 <p class="spectacle-place">Drummondville</p>
             </div>
             <div class="bg-btn-like">
-                <a href="http://www.lemadrid.ca/en/index.php" target="_blank" class="btn-visit">VISITER LE SITE</a>
+                <a href="http://www.lemadrid.ca/en/index.php" target="_blank" class="btn-visit spectacle">VISITER LE SITE</a>
                 <button aria-label="Aimer le spectacle" class="icons"><i class="fa-regular fa-heart icon-like"></i></button>
             </div>
         </div>
@@ -158,7 +158,7 @@
                 <p class="spectacle-place">St-Eustache</p>
             </div>
             <div class="bg-btn-like">
-                <a href="https://lezenithsteustache.ca/" target="_blank" class="btn-visit">VISITER LE SITE</a>
+                <a href="https://lezenithsteustache.ca/" target="_blank" class="btn-visit spectacle">VISITER LE SITE</a>
                 <button aria-label="Aimer le spectacle" class="icons"><i class="fa-regular fa-heart icon-like"></i></button>
             </div>
         </div>
